--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,18 +93,19 @@ h1,h2,h3,h4,h5,h6 {
     line-height: 1.2;
     color: #333;
     font-weight: 200;
+    margin-bottom: 1rem;
 }
 
 h1 {
-    font-size: 2.2rem;
+    font-size: 2.0rem;
 }
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
 
 h3 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 
 h4 {
@@ -180,7 +181,7 @@ ul {
 }
 
 .highlight pre {
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     margin-top: 0;
     padding: 20px;
 }
